# llamaindex_course

./: .env.example  .gitignore  README.md  database.db  pyproject.toml
data_json/: 0d5f5a77-b49d-4f8b-887f-70e9de390751.json
docs/: 01_setup.md  02_cos_similarity.md
flagged/: log.csv
llamaindex_course/: 04_query_a_stored_index.py  05_index_with_smaller_chunk.py  07_query_with_more_context.py  08a_index_and_persist_with_ollama.py  08b_using_with_ollama.py  main.py
llamaindex_course/demo_medical/: 01_fhir_reader.py  02_ollama_index_fhir.py  09_ollama_json_query.py  demo_medical.py  fhir_reader.py  medical_record_format.py
llamaindex_course/instructor/: 01_demo.py  02_demo.py  02_demo_streaming.py  03_demo_ollama.py  04_generate_hero_sql.py  05_auto_ticketer.py  06_spam_detector.py  07_ticket_classifications.py  08_extract_pii.py  09_extract_table.py  10_extract_table_with_vision.py  11_extract_vehicle_plate.py  11_extract_vehicle_plate_llava.py
llamaindex_course/langchain/: 01-code_assistant.py  01_generic_lanchain_query.py  01_lanchain_query.py  02_openai_query.py  02_query_your_data_with_logging.py  03_archivx.py  03_index_and_persist.py  03_ollama_query.py  03_perplexity_query.py  04_sample_classification.py  04a_sample_classification_ollama.py  04b_sample_classification-web.py  04b_web_sample_classification.py  05_whisper_web.py  07_extract_names.py  08_tools_search.py  10_write_code.py  11_text_to_sql.py  12_tool_tavily_search.py  langgraph_code_assistant.ipynb  storm.ipynb
llamaindex_course/langraph/: 01_langraph.py  02_demo01.py
llamaindex_course/llamaindex/: 01_olllama_embedding.py  01_query_your_data.py  03_ollama_query.py  04_query_a_stored_index.py  04_sample_classification.py  04a_sample_classification_ollama.py  04b_web_sample_classification_ollama.py  05_index_with_smaller_chunk.py  05_whisper_web.py
llamaindex_course/whisper/: 01_whisper.py  demo.m4a
tests/: test_main.py  test_medical.py
